1. fix bug image too small in redder 2. modify signpost sync for new sql 3. fix bug for font too small in collection

--- a/content_engine/sina/templates/css/collection.css
+++ b/content_engine/sina/templates/css/collection.css
@@ -70,6 +70,8 @@ img{
 .game-info{
 	width: 315px;
     padding-top:10px;
+    font-size: 20px;
+    font: bold;
 }
 
 .game-info img{
@@ -83,7 +85,7 @@ img{
 }
 
 .game-info table tr td:first-child{
-	width: 80px;
+	width: 100px;
 }
 
 .star{
